--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,14 @@ license = "MIT OR Apache-2.0"
 
 [features]
 default = []
-opengl = ["uuid", "x11/glx"]
+opengl = ["uuid", "x11/glx", "glow"]
 vulkan = ["ash"]
 
 [dependencies]
 keyboard-types = { version = "0.6.1", default-features = false }
 raw-window-handle = "0.5"
 ash = { version = "0.37.3", optional = true }
+glow = { version = "0.13.1", optional = true }
 
 [target.'cfg(target_os="linux")'.dependencies]
 xcb = { version = "0.9", features = ["thread", "xlib_xcb", "dri2"] }
