--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ vulkan = ["ash"]
 [dependencies]
 keyboard-types = { version = "0.6.1", default-features = false }
 raw-window-handle = "0.5"
-ash = { version = "0.37.3", optional = true }
+ash = { version = "0.37.3", optional = true, features = ["linked", "debug"] }
 glow = { version = "0.13.1", optional = true }
 
 [target.'cfg(target_os="linux")'.dependencies]
